--- a/app/assets/stylesheets/sephora_style_guide/utilities/_transitions.scss
+++ b/app/assets/stylesheets/sephora_style_guide/utilities/_transitions.scss
@@ -1,5 +1,6 @@
 .fade {
   opacity: 0;
+  background-color: rgba(0, 0, 0, 0.6);
   @include transition($transition-fade);
 
   &.show {
